<resources>
    <string name="app_name">StalkExchange</string>
    <string name="app_name_Space">Stalk Exchange</string>
    <string name="usn">Username</string>
    <string name="isn">Island Name</string>
    <string name="pwrd">Password</string>
    <string name="confirm">Comfirm Password</string>
    <string name="friendCode">Friend Code</string>
    <string name="accessCode">Access Code</string>
    <string name="logi">Log In</string>
    <string name="sign">Sign Up</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Submit">Submit</string>
    <string name="Weekday">Turnip Buying Prices</string>
    <string name="Sunday">Turnip Selling Prices</string>
    <string name="Sumbittitle">Submit your prices</string>
    <string name="Sundaydate">Turnip Selling Prices for %1$s</string>
    <string name="Weekdaydate">Turnip Buying Prices for %1$s</string>
    <string name="Bells"># Bells</string>
    <string name="userPage">My Info</string>
    <string name="PriceList">Price List</string>
    <string name="Graph">Dodo Code</string>
    <string name="exit">Exit</string>
    <string name="listName">Name: %1$s</string>
    <string name="listIsland">Island: %1$s</string>
    <string name="listFC">Friend Code: %1$s</string>
    <string name="listBells">Price: %1$d</string>
    <string name="Usersname">%1$s</string>
    <string name="UsersIsland">Resident of %1$s</string>
    <string name="UsersFC">%1$s</string>
    <string name="maxentry">You\'ve submitted your price!</string>
    <string name="tbc">Still under Development!</string>
    <string name="credit">Credits</string>
    <string name="creditapi">API Created by Ian Anthony </string>
    <string name="IGithub">https://github.com/ian-antking/stalk-exchange</string>
    <string name="creditapp">Android App created by Data Cohen</string>
    <string name="DGithub">https://github.com/TikvahTerminator</string>
    <string name="Desc">An android app for the StalkExchange webapp</string>
    <string name="best_price">The best price is on %1$s\'s island!</string>
    <string name="reporterror">No prices to report!</string>
    <string name="closedodo">Island is Closed</string>
    <string name="opendodo">Island open!:</string>
    <string name="dodotabtitle">Island Controls</string>
    <string name="dodocodeactual">Dodo Code: %1$s</string>
    <string name="dHINT">Dodo Code</string>
    <string name="OPISL">Open</string>
    <string name="CLISL">Close</string>
    <string name="OPTITLE">Open Island</string>
    <string name="CLTITLE">Close Island</string>
    <string name="Refresh">Refresh</string>
</resources>
