<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logofull" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="casual"
        android:text="@string/app_name_Space"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL"
        android:layout_width="416dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashTitle">

        <EditText
            android:id="@+id/BellCount"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/Bells"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitBells"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:onClick="submitprice"
            android:text="@string/Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/BellCount"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/timetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CL" />

    <Button
        android:id="@+id/RefreshBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="refreshprice"
        android:text="@string/Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetitle" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="346dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RefreshBut"
        app:layout_constraintVertical_bias="1.0">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/Vice"
            android:layout_width="393dp"
            android:layout_height="303dp"
            android:layout_gravity="center">

        </androidx.viewpager.widget.ViewPager>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="370dp"
            android:layout_height="41dp"
            android:layout_gravity="center">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PriceList" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Graph" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPage" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit" />
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>